[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Crickhollow Demo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://kod/Sozluk(Anamenu).gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="Sozluk(Anamenu)" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 320.0

[node name="OsmanlicaSozluk" type="Label" parent="."]
margin_top = 56.0
margin_right = 640.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "Osmanlıca  Sözlük"
align = 1
valign = 1

[node name="Alistirmalar" type="Button" parent="."]
margin_left = 224.0
margin_top = 128.0
margin_right = 416.0
margin_bottom = 168.0
custom_colors/font_color_focus = Color( 0.603922, 0.803922, 0.196078, 1 )
custom_colors/font_color = Color( 0.603922, 0.803922, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.603922, 0.803922, 0.196078, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.803922, 0.196078, 1 )
custom_fonts/font = SubResource( 3 )
text = "Alıştırmalar"

[node name="Kelime(Ekle-Cikar)" type="Button" parent="."]
margin_left = 224.0
margin_top = 192.0
margin_right = 416.0
margin_bottom = 232.0
custom_colors/font_color_focus = Color( 0.105882, 0.501961, 0.992157, 1 )
custom_colors/font_color = Color( 0.105882, 0.501961, 0.992157, 1 )
custom_colors/font_color_hover = Color( 0.105882, 0.501961, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.501961, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
text = "Kelime Ekle / Çıkar"

[node name="Cıkıs" type="Button" parent="."]
margin_left = 16.0
margin_top = 280.0
margin_right = 80.0
margin_bottom = 308.0
custom_colors/font_color_focus = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.996078, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Çıkış"
icon_align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="pressed" from="Alistirmalar" to="." method="_on_Alistirmalar_pressed"]
[connection signal="pressed" from="Kelime(Ekle-Cikar)" to="." method="_on_KelimeEkleCikar_pressed"]
[connection signal="pressed" from="Cıkıs" to="." method="_on_Cks_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
